Actions
Bug #13811
closedlibmtmalloc: 'size_nx' may be used uninitialized
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with gcc compilers:
../common/mtmalloc.c: In function 'add_oversize': ../common/mtmalloc.c:1387:12: error: 'size_nx' may be used uninitialized in this function [-Werror=maybe-uninitialized] lp->size += size_nx; ^~ cc1: all warnings being treated as errors *** Error code 1 dmake: Warning: Command failed for target `pics/mtmalloc.o' Current working directory /code/illumos-gate/usr/src/lib/libmtmalloc/i386
Testing done: build/install/boot
Updated by Electric Monk 11 months ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit b5358705b92a175b02aad08cd1c6b83dc69e2ae6
commit b5358705b92a175b02aad08cd1c6b83dc69e2ae6 Author: Toomas Soome <tsoome@me.com> Date: 2021-06-21T15:49:30.000Z 13811 libmtmalloc: 'size_nx' may be used uninitialized Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions