13811 libmtmalloc: 'size_nx' may be used uninitialized Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Dan McDonald <danmcd@joyent.com>